# Jibon_Sathu_Backend

./: .env.example  .gitignore  API_SPEC.md  README.md  SECURITY_MODEL.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Dev docs/: issue-01-cloud-schema-and-api-foundation.md  issue-02-server-side-delta-merge-logic.md  issue-03-ml-model-onnx-distribution-pipeline.md  issue-04-cloud-gateway-integration-spike.md
alembic/: env.py
alembic/versions/: 20260412_0001_initial_schema.py  20260412_0002_model_artifacts.py  20260412_0003_server_sequence_tombstones.py  20260412_0004_gateway_auth_merge_audit.py  20260412_0005_model_compatibility_metadata.py  20260412_0006_report_triage_columns.py
app/: config.py  db.py  db_sync.py  limits.py  main.py  worker.py
app/grpc_gen/: __init__.py  sync_pb2.py  sync_pb2_grpc.py
app/grpc_service/: ingest.py  server.py
app/ml/: __init__.py  onnx_export.py
app/models/: __init__.py  gateway.py  model_artifact.py  report.py  sync_log.py
app/schemas/: __init__.py  health.py  models.py  sync.py
app/services/: analytics_service.py  merge_policy.py  merge_service.py  model_paths.py  model_publish.py  server_sequence.py  sync_pull.py  sync_push.py  triage_enqueue.py  triage_logic.py
docs/: api-endpoints.md  er-diagram.md  gateway-spike-network-notes.md  gateway-spike-sequence.md  startup-guide.md  zone-a-architecture-audit.md
k6/: README.md  analytics.js  health.js  lib.js  sync-push.js
protos/: sync.proto
report/: issue-01-implementation-report.md  issue-02-implementation-report.md  issue-03-implementation-report.md  issue-04-implementation-report.md  issue-05-implementation-report.md  issue-06-implementation-report.md  issue-07-implementation-report.md  issue-08-implementation-report.md  issue-09-implementation-report.md  issue-10-implementation-report.md  issue-11-implementation-report.md  issue-12-implementation-report.md  issue-13-implementation-report.md
scripts/: export_road_decay_onnx.py  gen_grpc_stubs.py  k6.ps1  provision_gateway.py  publish_model.py  seed_dashboard_demo.py
tests/: conftest.py  test_analytics_load.py  test_api.py  test_grpc_rest_parity.py  test_issues_11_13.py  test_issues_5_8.py  test_merge_policy.py  test_models_onnx.py  test_schemas.py
tools/: gateway_sim.py
(+8 files in other folders)
